--- a/netlify.toml
+++ b/netlify.toml
@@ -4,5 +4,9 @@
   status = 200
 
 [build]
-  command = "npm run build"
-  publish = "build" 
+  command = "npm install && npm run build"
+  publish = "build"
+
+[build.environment]
+  NODE_VERSION = "18"
+  NPM_VERSION = "9" 
