--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@
   status = 200
 
 [build]
-  command = "npm install && npm run build"
+  command = "npm run netlify-build"
   publish = "build"
 
 [build.environment]
